[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

[project]
name = "toolbox_utils"
dynamic = ["readme", "version"]
description = "Python toolbox for common utilities"
dependencies = [
    "dateparser",
    "numpy >= 1.20, < 2.0 ; python_version <= '3.9'",
    "openpyxl",
    "pandas[excel]",
    "pint != 0.21.*, < 0.22 ; python_version < '3.9'",
    "pint-pandas",
    "pydantic",
    "scipy",
    "tabulate"
]
# Unused dependencies found: matplotlib, odfpy, openpyxl, pint, pyxlsb, tables,
# typing-extensions, xlrd, xlsxwriter that should be added to the projects that
# depend on this toolbox_utils.
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "time-series",
    "cli-app",
    "aggregate",
    "fill",
    "filter"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.urls]
documentation = "https://timcera.bitbucket.io/toolbox_utils/docs/index.html#toolbox_utils-documentation"
github = "https://github.com/timcera/toolbox_utils"
bitbucket = "https://bitbucket.org/timcera/toolbox_utils/src/main/"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "5.2.0"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
